# hello_haskell

./: README.md  haskell-project.cabal  makefile
app/: Main.hs
