library
    exposed-modules:  MyLib
					  OtherLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
					, directory
    hs-source-dirs:   src
    default-language: Haskell2010